Fix link box margins on small screens

--- a/modules/custom/cp_spotlights/css/cp_spotlights.css
+++ b/modules/custom/cp_spotlights/css/cp_spotlights.css
@@ -1,18 +1,20 @@
-.block-link-box {
-	margin: 1rem;
-}
+@media all and (min-width: 560px) {
+	.block-link-box {
+		margin: 1rem;
+	}
 
-.region-content-left .block-link-box,
-.region-content-right .block-link-box {
-	margin: 0;
-}
+	.region-content-left .block-link-box,
+	.region-content-right .block-link-box {
+		margin: 0;
+	}
 
-.layout__region--first .block-link-box {
-	margin-left: 0;
-}
+	.layout__region--first .block-link-box {
+		margin-left: 0;
+	}
 
-.layout__region--third .block-link-box {
-	margin-right: 0;
+	.layout__region--third .block-link-box {
+		margin-right: 0;
+	}
 }
 
 .block-link-box .link-box-image,
